fix: logo z-index

--- a/header.css
+++ b/header.css
@@ -6,7 +6,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 999;
+  z-index: 900;
 }
 
 @media screen and (min-width: 960px) {
@@ -45,6 +45,10 @@
   display: block;
   width: 100%;
   height: 100%;
+}
+
+.logo {
+  z-index: 999;
 }
 
 /* ヘッダーのナビ部分 */
