--- a/index.css
+++ b/index.css
@@ -64,7 +64,7 @@ body {
 }
 
 .links-container {
-  margin-bottom: 3rem;
+  padding-bottom: 6rem;
 }
 
 .links {
